--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,35 @@ line_length = 88
 profile = "black"
 force_sort_within_sections = "True"
 classes = ["MISSING"]
+
+[tool.poetry]
+name = "palkit"
+version = "0.1.0"
+description = "Useful functions."
+authors = ["PAL <info@predictive-analytics-lab.com>"]
+license = "Apache License 2.0"
+packages = [
+  { include = "kit" },
+  { include = "kit/py.typed" }
+]
+classifiers=[
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "License :: OSI Approved :: Apache Software License",
+  "Operating System :: OS Independent",
+  "Typing :: Typed",
+]
+keywords=["typing", "python"]
+repository="https://github.com/predictive-analytics-lab/palkit"
+readme="README.md"
+
+[tool.poetry.dependencies]
+python = ">=3.7"
+hydra-core = "1.1.0.dev3"
+
+[tool.poetry.dev-dependencies]
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
