--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,10 +53,14 @@ repository="https://github.com/predictive-analytics-lab/palkit"
 readme="README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7"
+python = ">=3.7,<4.0"
 hydra-core = "1.1.0.dev3"
 
 [tool.poetry.dev-dependencies]
+black = "^20.8b1"
+mypy = "^0.800"
+pytest = "^6.2.2"
+isort = "^5.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
