--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ readme="README.md"
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
 hydra-core = "1.1.0.dev4"
+numpy = "^1.20.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
