--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,11 @@ readme="README.md"
 python = ">=3.7,<4.0"
 hydra-core = "1.1.0.dev4"
 numpy = "^1.20.1"
+torch = { version = "^1.8", optional = true }
+
+[tool.poetry.extras]
+ci = ["torch"]
+
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
