add torch to mypy.ini

--- a/mypy.ini
+++ b/mypy.ini
@@ -13,3 +13,7 @@ show_error_codes = True
 
 [mypy-pytest.*]
 ignore_missing_imports = True
+
+[mypy-torch.*]
+follow_imports = skip
+follow_imports_for_stubs = True
