--- a/mypy.ini
+++ b/mypy.ini
@@ -5,11 +5,19 @@ no_implicit_optional = True
 strict_equality = True
 check_untyped_defs = True
 warn_unreachable = True
-disallow_any_unimported = True
+disallow_any_unimported = False
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
 warn_incomplete_stub = True
 show_error_codes = True
+
+[mypy-hydra.*]
+follow_imports = skip
+follow_imports_for_stubs = True
+
+[mypy-omegaconf.*]
+follow_imports = skip
+follow_imports_for_stubs = True
 
 [mypy-pytest.*]
 ignore_missing_imports = True
