--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ no_implicit_optional = True
 strict_equality = True
 check_untyped_defs = True
 warn_unreachable = True
-disallow_any_unimported = False
+disallow_any_unimported = True
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
 warn_incomplete_stub = True
