--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ readme="README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
-hydra-core = "1.1.0.dev4"
+hydra-core = "^1.1.0.dev4"
 numpy = "^1.20.1"
 torch = { version = "^1.8", optional = true }
 
