Include py.typed in the package
See python-poetry/poetry#1338
and also https://python-poetry.org/docs/pyproject/#packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ authors = ["PAL <info@predictive-analytics-lab.com>"]
 license = "Apache License 2.0"
 packages = [
   { include = "kit" },
-  { include = "kit/py.typed" }
 ]
+include=["kit/py.typed"]
 classifiers=[
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
