--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Format with isort
       run: |
         isort --check --diff .
-    - name: Install Additional Dependencies for Tests
+    - name: Install Additional Dependencies for Type-Checking/Tests
       run: poetry install -E ci --no-interaction
     - name: Check with mypy
       run: |
