--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,11 @@ jobs:
     - name: Format with isort
       run: |
         isort --check --diff .
+    - name: Install Additional Dependencies for Type-Checking/Tests
+      run: poetry install -E ci --no-interaction
     - name: Check with mypy
       run: |
         mypy tests/
-    - name: Install Additional Dependencies for Tests
-      run: poetry install -E ci --no-interaction
     - name: Test with pytest
       run: |
         python -m pytest -vv tests/
