--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
 line-length = 100
-target-version = ['py36']
+target-version = ['py37']
 
 [tool.isort]
 known_third_party = [
@@ -60,6 +60,7 @@ numpy = {version = "^1.20.3", optional = true}
 
 [tool.poetry.extras]
 ci = ["torch", "numpy"]
+hydra = ["hydra-core"]
 
 
 [tool.poetry.dev-dependencies]
