--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,11 +55,12 @@ readme="README.md"
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
 torch = { version = "^1.8", optional = true }
+pytorch_lightning = { version = "*", optional = true }
 hydra-core = {version = "^1.1.0", optional = true}
 numpy = {version = "^1.20.3", optional = true}
 
 [tool.poetry.extras]
-ci = ["torch", "numpy"]
+ci = ["torch", "numpy", "pytorch_lightning"]
 hydra = ["hydra-core"]
 
 
