--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,8 @@ hydra-core = {version = "^1.1.0", optional = true}
 numpy = {version = "^1.20.3", optional = true}
 
 [tool.poetry.extras]
-ci = ["torch", "numpy", "pytorch_lightning"]
+ci = ["torch", "numpy"]
+torch = ["torch", "pytorch_lightning"]
 hydra = ["hydra-core"]
 
 
