--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ numpy = {version = "^1.20.3", optional = true}
 
 [tool.poetry.extras]
 ci = ["torch", "numpy"]
-torch = ["torch", "pytorch_lightning"]
+torch = ["torch", "pytorch-lightning"]
 hydra = ["hydra-core"]
 
 
