--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,11 +55,13 @@ readme="README.md"
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
 torch = { version = "^1.8", optional = true }
+pytorch-lightning = { version = "*", optional = true }
 hydra-core = {version = "^1.1.0", optional = true}
 numpy = {version = "^1.20.3", optional = true}
 
 [tool.poetry.extras]
 ci = ["torch", "numpy"]
+torch = ["torch", "pytorch-lightning"]
 hydra = ["hydra-core"]
 
 
