--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ classes = ["MISSING"]
 
 [tool.poetry]
 name = "palkit"
-version = "0.3.5-alpha.0"
+version = "0.3.5"
 description = "Useful functions."
 authors = ["PAL <info@predictive-analytics-lab.com>"]
 license = "Apache License 2.0"
