--- a/palkit/pyproject.toml
+++ b/palkit/pyproject.toml
@@ -2,19 +2,6 @@
 line-length = 100
 target-version = ['py37']
 
-[tool.mypy]
-python_version = "3.7"
-no_implicit_optional = true
-allow_redefinition = true
-strict_equality = true
-check_untyped_defs = true
-warn_unreachable = true
-disallow_any_unimported = false
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-show_error_codes = true
-warn_unused_ignores = true
-
 [tool.isort]
 known_third_party = [
   "black",
@@ -83,6 +70,15 @@ black = "^20.8b1"
 mypy = "^0.800"
 pytest = "^6.2.2"
 isort = "^5.7.0"
+
+[tool.pyright]
+reportMissingTypeStubs = "none"
+reportUnknownParameterType = "none"
+reportUnknownArgumentType = "none"
+reportUnknownLambdaType = "none"
+reportUnknownVariableType = "none"
+reportUnknownMemberType = "none"
+reportMissingTypeArgument = "none"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
