--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,9 +53,11 @@ jobs:
       with:
         node-version: "14"
 
+    - name: Install pyright
+      run: npm install -g pyright
+
     - name: Run type checking
       run: |
-        npm install -g pyright
         pyright kit
         pyright tests
 
