--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,11 +53,13 @@ repository="https://github.com/predictive-analytics-lab/palkit"
 readme="README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4.0"
+python = ">=3.7.1,<4.0"
 torch = { version = "^1.8", optional = true }
-pytorch-lightning = { version = "*", optional = true }
+pytorch-lightning = "^1.4.2"
 hydra-core = {version = "^1.1.0", optional = true}
 numpy = {version = "^1.20.3", optional = true}
+pandas = "^1.3.1"
+wandb = "^0.12.0"
 
 [tool.poetry.extras]
 ci = ["torch", "numpy"]
