--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,16 +55,19 @@ readme="README.md"
 [tool.poetry.dependencies]
 python = ">=3.7.1,<4.0"
 torch = { version = "^1.8", optional = true }
-pytorch-lightning = "^1.4.2"
+pytorch-lightning = {version ="^1.4.2", optional= true}
 hydra-core = {version = "^1.1.0", optional = true}
 numpy = {version = "^1.20.3", optional = true}
-pandas = "^1.3.1"
-wandb = "^0.12.0"
+pandas = {version = "^1.3.1", optional = true}
+wandb = {version= "^0.12.0", optional = true}
+tqdm = {version = "^4.62.0", optional = true}
 
 [tool.poetry.extras]
-ci = ["torch", "numpy"]
-torch = ["torch", "pytorch-lightning"]
+all = ["hydra-core", "pandas", "pytorch-lightning",  "wandb"]
+torch = ["torch", "numpy"]
+pl = ["pytorch-lightning", "tqdm"]
 hydra = ["hydra-core"]
+wandb = ["wandb", "pandas"]
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
