--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,17 +53,21 @@ repository="https://github.com/predictive-analytics-lab/palkit"
 readme="README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7,<4.0"
+python = ">=3.7.1,<4.0"
 torch = { version = "^1.8", optional = true }
-pytorch-lightning = { version = "*", optional = true }
+pytorch-lightning = {version ="^1.4.2", optional= true}
 hydra-core = {version = "^1.1.0", optional = true}
 numpy = {version = "^1.20.3", optional = true}
+pandas = {version = "^1.3.1", optional = true}
+wandb = {version= "^0.12.0", optional = true}
+tqdm = {version = "^4.62.0", optional = true}
 
 [tool.poetry.extras]
-ci = ["torch", "numpy"]
-torch = ["torch", "pytorch-lightning"]
+all = ["hydra-core", "pandas", "pytorch-lightning",  "wandb"]
+torch = ["torch", "numpy"]
+pl = ["pytorch-lightning", "tqdm"]
 hydra = ["hydra-core"]
-
+wandb = ["wandb", "pandas"]
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
@@ -72,13 +76,21 @@ pytest = "^6.2.2"
 isort = "^5.7.0"
 
 [tool.pyright]
-reportMissingTypeStubs = "none"
-reportUnknownParameterType = "none"
-reportUnknownArgumentType = "none"
-reportUnknownLambdaType = "none"
-reportUnknownVariableType = "none"
-reportUnknownMemberType = "none"
-reportMissingTypeArgument = "none"
+include = ["bolts"]
+exclude = ["**/node_modules", "**/__pycache__"]
+typeCheckingMode = "basic"
+pythonVersion = "3.7"
+reportUnusedImport = "error"
+reportDuplicateImport  = "error"
+reportIncompatibleVariableOverride = "error"
+reportOverlappingOverload = "error"
+reportUntypedNamedTuple = "error"
+reportConstantRedefinition = "warning"
+reportMissingImports = "error"
+reportMissingTypeStubs = "warning"
+strictListInference = true
+strictSetInference = true
+strictParameterNoneValue = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
