--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.10.0-rc.2
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10.0-rc.2
+        python-version: 3.9
 
     - name: Set up Poetry cache for Python dependencies
       uses: actions/cache@v2
