--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Set up python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.10.0-rc.2
+        python-version: 3.9
     #----------------------------------------------
     #  -----  install & configure poetry  -----
     #----------------------------------------------
