--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install Poetry
       uses: snok/install-poetry@v1.2
       with:
-        virtualenvs-create: false
+        virtualenvs-create: true
         installer-parallel: true
 
     #----------------------------------------------
