--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ python = ">=3.7.1,<4.0"
 torch = { version = "^1.8", optional = true }
 pytorch-lightning = {version ="^1.4.2", optional= true}
 hydra-core = {version = "^1.1.0", optional = true}
+neoconfigen = {git = "https://github.com/predictive-analytics-lab/neoconfigen.git", branch = "main"}
 numpy = {version = "^1.20.3", optional = true}
 pandas = {version = "^1.3.1", optional = true}
 wandb = {version= "^0.12.0", optional = true}
@@ -66,7 +67,7 @@ tqdm = {version = "^4.62.0", optional = true}
 all = ["hydra-core", "pandas", "pytorch-lightning",  "wandb"]
 torch = ["torch", "numpy"]
 pl = ["pytorch-lightning", "tqdm"]
-hydra = ["hydra-core"]
+hydra = ["hydra-core", "neoconfigen"]
 wandb = ["wandb", "pandas"]
 
 [tool.poetry.dev-dependencies]
