Install wheel and typing_extensions

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,7 +21,8 @@ jobs:
 
     - name: Install sphinx
       run: |
-        pip install sphinx autodocsumm
+        pip install wheel
+        pip install sphinx autodocsumm typing_extensions
 
     - name: Build docs
       run: |
