--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ repository="https://github.com/predictive-analytics-lab/palkit"
 readme="README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7.1,<4.0"
+python = "^3.7"
 torch = { version = "^1.8", optional = true }
 pytorch-lightning = {version ="^1.4.2", optional= true}
 hydra-core = {version = "^1.1.0", optional = true}
