--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install sphinx
       run: |
         pip install wheel
-        pip install sphinx autodocsumm typing_extensions
+        pip install sphinx autodocsumm typing_extensions sphinx_rtd_theme
 
     - name: Build docs
       run: |
