--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,15 +31,15 @@ force_sort_within_sections = "True"
 classes = ["MISSING"]
 
 [tool.poetry]
-name = "palkit"
+name = "palmantra"
 version = "1.0.0.dev0"
 description = "Useful functions."
 authors = ["PAL <info@predictive-analytics-lab.com>"]
 license = "Apache License 2.0"
 packages = [
-  { include = "kit" },
+  { include = "mantra" },
 ]
-include=["kit/py.typed"]
+include=["mantra/py.typed"]
 classifiers=[
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
@@ -49,7 +49,7 @@ classifiers=[
   "Typing :: Typed",
 ]
 keywords=["typing", "python"]
-repository="https://github.com/predictive-analytics-lab/palkit"
+repository="https://github.com/predictive-analytics-lab/palmantra"
 readme="README.md"
 
 [tool.poetry.dependencies]
@@ -77,7 +77,6 @@ pytest = "^6.2.2"
 isort = "^5.7.0"
 
 [tool.pyright]
-include = ["bolts"]
 exclude = ["**/node_modules", "**/__pycache__"]
 typeCheckingMode = "basic"
 pythonVersion = "3.7"
