--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ force_sort_within_sections = "True"
 classes = ["MISSING"]
 
 [tool.poetry]
-name = "palmantra"
+name = "mantra"
 version = "1.0.0.dev0"
 description = "Useful functions."
 authors = ["PAL <info@predictive-analytics-lab.com>"]
@@ -49,7 +49,7 @@ classifiers=[
   "Typing :: Typed",
 ]
 keywords=["typing", "python"]
-repository="https://github.com/predictive-analytics-lab/palmantra"
+repository="https://github.com/predictive-analytics-lab/mantra"
 readme="README.md"
 
 [tool.poetry.dependencies]
