--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,15 +31,15 @@ force_sort_within_sections = "True"
 classes = ["MISSING"]
 
 [tool.poetry]
-name = "mantra"
+name = "ranzen"
 version = "1.0.0.dev0"
 description = "A toolkit facilitating machine-learning experimentation."
 authors = ["PAL <info@predictive-analytics-lab.com>"]
 license = "Apache License 2.0"
 packages = [
-  { include = "mantra" },
+  { include = "ranzen" },
 ]
-include=["mantra/py.typed"]
+include=["ranzen/py.typed"]
 classifiers=[
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
@@ -49,7 +49,7 @@ classifiers=[
   "Typing :: Typed",
 ]
 keywords=["typing", "python"]
-repository="https://github.com/predictive-analytics-lab/mantra"
+repository="https://github.com/predictive-analytics-lab/ranzen"
 readme="README.md"
 
 [tool.poetry.dependencies]
