Fix reference to old module name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
 
     - name: Run type checking
       run: |
-        pyright kit
+        pyright ranzen
         pyright tests
 
     - name: Test with pytest
