--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ black = "^20.8b1"
 mypy = "^0.800"
 pytest = "^6.2.2"
 isort = "^5.7.0"
+darglint = "^1.8.0"
 
 [tool.pyright]
 exclude = ["**/node_modules", "**/__pycache__"]
