--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+---
 name: ranzen CI
 
 on:
@@ -6,65 +7,124 @@ on:
     - main
 
 jobs:
-  ranzen_ci:
+  lint_with_pylint:
+
     runs-on: ubuntu-latest
-    env:
-      POETRY_VIRTUALENVS_CREATE: false
 
     steps:
     - uses: actions/checkout@v2
-
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-
-    - name: Set up Poetry cache for Python dependencies
-      uses: actions/cache@v2
-      if: startsWith(runner.os, 'Linux')
-      with:
-        path: ~/.cache/pypoetry
-        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: ${{ runner.os }}-poetry-
-
-    - name: Install Poetry
+    - name: Install pylint
       run: |
-        curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
-        python get-poetry.py -y
-        echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-        rm get-poetry.py
+        python -m pip install --upgrade pip
+        pip install pylint
+    - name: Lint with pylint
+      run: |
+        pylint --fail-under=8.5 ethicml/
+        pylint --fail-under=8.5 tests/
+  format_with_black_and_isort:
 
-    - name: Install dependencies
-      run: poetry install --no-interaction
+    runs-on: ubuntu-latest
 
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install black
+      run: |
+        python -m pip install --upgrade pip
+        pip install black isort
     - name: Format with black
       run: |
-        python -m black --check .
-
+        python -m black --check -l 100 -t py37 -S ranzen/
+        python -m black --check -l 100 -t py37 -S tests/
     - name: Format with isort
       run: |
-        isort --check --diff .
+        isort . --check --diff
+  check_docstrings:
 
-    - name: Install Additional Dependencies for Type-Checking/Tests
-      run: poetry install -E all --no-interaction
+    runs-on: ubuntu-latest
 
-    - name: Setup node.js (for pyright)
-      uses: actions/setup-node@v1
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
       with:
-        node-version: "14"
-
-    - name: Install pyright
-      run: npm install -g pyright
-
-    - name: Run type checking
+        python-version: 3.7
+    - name: Install darglint
       run: |
-        pyright ranzen
-        pyright tests
-
-    - name: Test with pytest
-      run: |
-        python -m pytest -vv tests/
-
-    - name: Check docstrings
+        python -m pip install --upgrade pip
+        pip install darglint
+    - name: Check docstrings with darglint
       run: |
         darglint --docstring-style sphinx -v 2 -z long ranzen
+  test_with_pytest:
+    needs: [lint_with_pylint, format_with_black_and_isort, check_docstrings]
+    runs-on: ubuntu-latest
+
+    steps:
+      # ----------------------------------------------
+      #  ---  check-out repo and set-up python ---
+      # ----------------------------------------------
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+
+      # ----------------------------------------------
+      #  -----  install & configure poetry  -----
+      # ----------------------------------------------
+      - name: Install Poetry
+        uses: snok/install-poetry@v1.2
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
+
+      # ----------------------------------------------
+      #       load cached venv if cache exists
+      # ----------------------------------------------
+      - name: Set up Poetry cache for Python dependencies
+        id: cached-poetry-dependencies
+        # uses: actions/cache@v2
+        uses: pat-s/always-upload-cache@v2
+        with:
+          path: .venv
+          key: venvEM2-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+
+      # ----------------------------------------------
+      # install dependencies if cache does not exist
+      # ----------------------------------------------
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install -E all --no-interaction --no-root
+
+
+      # ----------------------------------------------
+      #  -----  Install and Run pyright  -----
+      # ----------------------------------------------
+      - name: Setup node.js (for pyright)
+        uses: actions/setup-node@v1
+        with:
+          node-version: "14"
+        - name: Install pyright
+          run: npm install -g pyright
+
+      - name: Run pyright
+        run: |
+          pyright ranzen
+          pyright tests
+
+      # ----------------------------------------------
+      #  -----           Run Tests            -----
+      # ----------------------------------------------
+      - name: Test with pytest
+        run: |
+          poetry run python -m pytest -vv --cov=ranzen --cov-fail-under=80  tests/
