--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,24 +7,6 @@ on:
     - main
 
 jobs:
-  lint_with_pylint:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: Install pylint
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Lint with pylint
-      run: |
-        pylint --fail-under=8.5 ranzen/
-
   format_with_black_and_isort:
 
     runs-on: ubuntu-latest
@@ -65,13 +47,13 @@ jobs:
       run: |
         darglint --docstring-style sphinx -v 2 -z long ranzen
 
-  test_with_pytest:
-    needs: [lint_with_pylint, format_with_black_and_isort, check_docstrings]
+  run_tests_type_checking_and_pylint:
+    needs: [format_with_black_and_isort, check_docstrings]
     runs-on: ubuntu-latest
 
     steps:
       # ----------------------------------------------
-      #  ---  check-out repo and set-up python ---
+      #  ----  check-out repo and set-up python ----
       # ----------------------------------------------
       - name: Check out repository
         uses: actions/checkout@v2
@@ -109,7 +91,18 @@ jobs:
         run: poetry install -E all --no-interaction --no-root
 
       # ----------------------------------------------
-      #  -----  Install and Run pyright  -----
+      #  ----  install and run pylint ----
+      # ----------------------------------------------
+      - name: Install pylint
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+      - name: Lint with pylint
+        run: |
+          pylint --fail-under=8.5 ranzen/
+
+      # ----------------------------------------------
+      #  -----  install and run pyright  -----
       # ----------------------------------------------
       - name: Setup node.js (for pyright)
         uses: actions/setup-node@v1
