--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,4 +112,4 @@ jobs:
       # ----------------------------------------------
       - name: Test with pytest
         run: |
-          poetry run python -m pytest -vv --cov=ranzen --cov-fail-under=80  tests/
+          poetry run python -m pytest -vv tests/
