--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,24 +7,35 @@ on:
     - main
 
 jobs:
-  format_with_black_and_isort:
-
+  format_with_black:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: 3.9
     - name: Install black
       run: |
         python -m pip install --upgrade pip
-        pip install black isort
+        pip install 'black<=23'
     - name: Format with black
       run: |
         python -m black --check -l 100 -t py37 -S ranzen/
         python -m black --check -l 100 -t py37 -S tests/
+
+  format_with_isort:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install isort
+      run: |
+        python -m pip install --upgrade pip
+        pip install isort
     - name: Format with isort
       run: |
         isort . --check --diff
