--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,16 +83,16 @@ jobs:
           virtualenvs-in-project: true
           installer-parallel: true
 
-      # ----------------------------------------------
-      #       load cached venv if cache exists
-      # ----------------------------------------------
-      - name: Set up Poetry cache for Python dependencies
-        id: cached-poetry-dependencies
-        # uses: actions/cache@v2
-        uses: pat-s/always-upload-cache@v2
-        with:
-          path: .venv
-          key: venvEM2-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+      # # ----------------------------------------------
+      # #       load cached venv if cache exists
+      # # ----------------------------------------------
+      # - name: Set up Poetry cache for Python dependencies
+      #   id: cached-poetry-dependencies
+      #   # uses: actions/cache@v2
+      #   uses: pat-s/always-upload-cache@v2
+      #   with:
+      #     path: .venv
+      #     key: venvEM2-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
 
       # ----------------------------------------------
       # install dependencies if cache does not exist
