--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,9 +63,8 @@ wandb = {version= "^0.12.0", optional = true}
 tqdm = {version = "^4.62.0", optional = true}
 
 [tool.poetry.extras]
-all = ["hydra-core", "neoconfigen", "pandas", "pytorch-lightning", "wandb"]
+all = ["hydra-core", "neoconfigen", "pandas", "wandb"]
 torch = ["torch", "numpy"]
-pl = ["pytorch-lightning", "tqdm"]
 hydra = ["hydra-core", "neoconfigen"]
 wandb = ["wandb", "pandas"]
 
@@ -78,7 +77,7 @@ python-type-stubs = {git = "https://github.com/predictive-analytics-lab/python-t
 
 [tool.pyright]
 exclude = ["**/node_modules", "**/__pycache__", "**/."]
-typeCheckingMode = "basic"
+typeCheckingMode = "strict"
 pythonVersion = "3.7"
 reportUnusedImport = "error"
 reportDuplicateImport  = "error"
