--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ wandb = {version= "^0.12.0", optional = true}
 tqdm = {version = "^4.62.0", optional = true}
 
 [tool.poetry.extras]
-all = ["hydra-core", "neoconfigen", "pandas", "wandb"]
+all = ["hydra-core", "neoconfigen", "pandas", "wandb", "torch", "numpy"]
 torch = ["torch", "numpy"]
 hydra = ["hydra-core", "neoconfigen"]
 wandb = ["wandb", "pandas"]
