--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,6 @@ readme="README.md"
 [tool.poetry.dependencies]
 python = "^3.7.1"
 torch = { version = "^1.8", optional = true }
-pytorch-lightning = {version ="^1.4.2", optional= true}
 hydra-core = {version = "^1.1.0", optional = true}
 neoconfigen = {version = "^2.0.0", optional = true}
 numpy = {version = "^1.20.3", optional = true}
@@ -64,9 +63,8 @@ wandb = {version= "^0.12.0", optional = true}
 tqdm = {version = "^4.62.0", optional = true}
 
 [tool.poetry.extras]
-all = ["hydra-core", "neoconfigen", "pandas", "pytorch-lightning", "wandb"]
+all = ["hydra-core", "neoconfigen", "pandas", "wandb", "torch", "numpy"]
 torch = ["torch", "numpy"]
-pl = ["pytorch-lightning", "tqdm"]
 hydra = ["hydra-core", "neoconfigen"]
 wandb = ["wandb", "pandas"]
 
@@ -78,8 +76,8 @@ darglint = "^1.8.0"
 python-type-stubs = {git = "https://github.com/predictive-analytics-lab/python-type-stubs.git", rev = "53dead4" }
 
 [tool.pyright]
-exclude = ["**/node_modules", "**/__pycache__"]
-typeCheckingMode = "basic"
+exclude = ["**/node_modules", "**/__pycache__", "**/."]
+typeCheckingMode = "strict"
 pythonVersion = "3.7"
 reportUnusedImport = "error"
 reportDuplicateImport  = "error"
