--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,17 +46,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.7
+    - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
-    - name: Install darglint
+        python-version: "3.10"
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install darglint
+        pip install wheel
+        pip install darglint sphinx autodocsumm typing_extensions furo
     - name: Check docstrings with darglint
       run: |
         darglint --docstring-style sphinx -v 2 -z long ranzen
+    - name: Build with sphinx
+      run: |
+        cd docs
+        sphinx-build -W -b html . _build
 
   run_tests_and_type_checking:
     needs: [format_with_black, format_with_isort, check_docstrings]
