Make docs on website correspond to latest release

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,9 +2,9 @@
 name: Build docs
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types:
+      - published
 
 jobs:
   docs:
@@ -23,15 +23,14 @@ jobs:
     - name: Install sphinx
       run: |
         pip install wheel
-        pip install sphinx autodocsumm typing_extensions furo
+        pip install sphinx autodocsumm typing_extensions furo toml
 
     - name: Build docs
       run: |
-        cd docs
-        bash generate_docs.sh
+        sphinx-build -b html ./docs ./docs/_build
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
-        publish_dir: ./docs/_build/html
+        publish_dir: ./docs/_build
         github_token: ${{ secrets.GITHUB_TOKEN }}
