--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,14 +54,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install wheel
-        pip install darglint sphinx autodocsumm typing_extensions furo
+        pip install darglint sphinx autodocsumm typing_extensions furo toml
     - name: Check docstrings with darglint
       run: |
         darglint --docstring-style sphinx -v 2 -z long ranzen
     - name: Build with sphinx
       run: |
-        cd docs
-        sphinx-build -W -b html . _build
+        sphinx-build -W -b html ./docs ./docs/_build
 
   run_tests_and_type_checking:
     needs: [format_with_black, format_with_isort, check_docstrings]
