--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,8 +55,8 @@ readme="README.md"
 [tool.poetry.dependencies]
 python = "^3.7.1"
 torch = { version = "^1.8", optional = true }
-hydra-core = {version = "^1.1.0", optional = true}
-neoconfigen = {version = "^2.0.0", optional = true}
+hydra-core = {version = "^1.2.0dev3", optional = true}
+neoconfigen = {version = ">=2.1.4", optional = true}
 numpy = {version = "^1.20.3", optional = true}
 pandas = {version = "^1.3.1", optional = true}
 wandb = {version= "^0.12.0", optional = true}
