--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ classifiers=[
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
   "License :: OSI Approved :: Apache Software License",
   "Operating System :: OS Independent",
   "Typing :: Typed",
@@ -53,11 +54,11 @@ repository="https://github.com/predictive-analytics-lab/ranzen"
 readme="README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7.1"
+python = ">=3.7.1,<3.11"
 torch = { version = "^1.8", optional = true }
-hydra-core = {version = "^1.2.0dev3", optional = true}
+hydra-core = {version = "^1.2.0", optional = true}
 neoconfigen = {version = ">=2.1.4", optional = true}
-numpy = {version = "^1.20.3", optional = true}
+numpy = {version = "^1.21.4", optional = true}
 pandas = {version = "^1.3.1", optional = true}
 wandb = {version= "^0.12.0", optional = true}
 tqdm = {version = "^4.62.0", optional = true}
