--- a/.github/release.yml
+++ b/.github/release.yml
@@ -16,6 +16,9 @@ changelog:
     - title: Bug fixes 🐞
       labels:
         - bugfix
-    - title: Other Changes
+    - title: Documentation improvements ✍️
+      labels:
+        - documentation
+    - title: Other Changes ⚔️
       labels:
         - "*"
