--- a/.github/release.yml
+++ b/.github/release.yml
@@ -16,7 +16,7 @@ changelog:
     - title: Bug fixes 🐞
       labels:
         - bugfix
-    - title: Documentation improvements 🪶
+    - title: Documentation improvements ✍️
       labels:
         - documentation
     - title: Other Changes ⚔️
