--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,28 +52,39 @@ keywords=["typing", "python"]
 repository="https://github.com/predictive-analytics-lab/ranzen"
 readme="README.md"
 
+# By default, dependencies across all non-optional groups will be installed when executing poetry install.
+# If you only want to install the default, non-grouped dependencies (aka the main group), you can 
+# do so with the --only option: ``poetry install --only main``. Equally, you can exclude one or 
+# more groups with the --without option: ``poetry install --without torch``.
 [tool.poetry.dependencies]
 python = ">=3.8.0,<3.11"
-torch = { version = "^1.8", optional = true }
-hydra-core = {version = "^1.2.0", optional = true}
-neoconfigen = {version = ">=2.3.3", optional = true}
-numpy = {version = "^1.21.4", optional = true}
-pandas = {version = "^1.4.3", optional = true}
-wandb = {version= ">=0.12,<0.14", optional = true}
-tqdm = {version = "^4.62.0", optional = true}
 
-[tool.poetry.extras]
-all = ["hydra-core", "neoconfigen", "pandas", "wandb", "torch", "numpy"]
-torch = ["torch", "numpy"]
-hydra = ["hydra-core", "neoconfigen"]
+[tool.poetry.group.wandb.dependencies]
 wandb = ["wandb", "pandas"]
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.torch.dependencies]
+torch = [
+    {version = ">=1.12.1", source = "cu116", markers = "sys_platform == 'linux'"},
+    {version = ">=1.12.1", source = "pypi"}
+]
+
+[tool.poetry.group.hydra.dependencies]
+hydra = ["hydra-core", "neoconfigen"]
+hydra-core = { version = "^1.2.0" }
+neoconfigen = { version = ">=2.3.3" }
+
+[tool.poetry.group.dev.dependencies]
 black = "^22.6"
 pytest = "^7.1.2"
 isort = "^5.7.0"
 darglint = "^1.8.0"
 pandas-stubs = ">=1.4.3.220718"
+
+[[tool.poetry.source]]
+name = "cu116"
+url = "https://download.pytorch.org/whl/cu116"
+default = false
+secondary = true
 
 [tool.pyright]
 exclude = ["**/node_modules", "**/__pycache__", "**/."]
