--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,10 +60,12 @@ readme="README.md"
 python = ">=3.8.0,<3.11"
 
 [tool.poetry.group.wandb.dependencies]
-wandb = ["wandb", "pandas"]
+pandas = { version = "^1.4.3" }
+wandb = { version= ">=0.12,<0.14" }
 
 [tool.poetry.group.torch.dependencies]
 torch = { version = ">=1.12.1" }
+numpy = { version = "^1.21.4" }
 
 [tool.poetry.group.hydra.dependencies]
 hydra-core = { version = "^1.2.0" }
