Remove some and add some type-ignore comments
Pyright can nowadays point out superfluous comments.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ darglint = "^1.8.0"
 pandas-stubs = ">=1.4.3.220718"
 
 [tool.pyright]
-exclude = ["**/node_modules", "**/__pycache__", "**/."]
+exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
 typeCheckingMode = "basic"
 pythonVersion = "3.8"
 reportUnusedImport = "error"
@@ -93,6 +93,7 @@ reportMissingTypeStubs = "warning"
 strictListInference = true
 strictSetInference = true
 strictParameterNoneValue = true
+reportUnnecessaryTypeIgnoreComment = "warning"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
