--- a/mypy.ini
+++ b/mypy.ini
@@ -10,6 +10,7 @@ disallow_untyped_defs = True
 disallow_incomplete_defs = True
 warn_incomplete_stub = True
 show_error_codes = True
+warn_unused_ignores = True
 
 [mypy-pytest.*]
 ignore_missing_imports = True
