--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,55 @@ strictSetInference = true
 strictParameterNoneValue = true
 reportUnnecessaryTypeIgnoreComment = "warning"
 
+[tool.ruff]
+line-length = 100
+select = [
+    "D", # pydocstyle
+    "E", # pycodestyle
+    "F", # pyflakes
+    # "I", # isort
+    # "UP", # pyupgrade
+    # "PDV", # pandas-vet
+    # "ANN", # flake8-annotations
+]
+ignore = [
+    "D105", # magic methods
+    "D107", # __init__
+    "D203",
+    "D208", # over indentation
+    "D212",
+    "D213",
+    "D214",
+    "D215",
+    "D404",
+    "D405",
+    "D406",
+    "D407",
+    "D408",
+    "D409",
+    "D410",
+    "D411",
+    "D413",
+    "D415",
+    "D416",
+    "D417",
+    "TID252", # relative imports
+    "PDV901", # forbidding "df" as a variable name
+    "ANN101",
+    "ANN102",
+]
+target-version = "py38"
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F403"]
+
+[tool.ruff.isort]
+known-third-party = ["PIL", "black", "git", "fairlearn", "matplotlib", "mypy", "numpy", "pandas", "pylint", "pytest", "scipy", "seaborn", "setuptools", "sklearn", "teext", "torch"]
+extra-standard-library = ["__future__", "typing_extensions"]
+
+[tool.ruff.flake8-annotations]
+mypy-init-return = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
