--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ known_third_party = [
   "wandb",
 ]
 known_future_library = []
-extra_standard_library = ["dataclasses", "__future__"]
+extra_standard_library = ["dataclasses", "__future__", "typing_extensions"]
 line_length = 88
 profile = "black"
 force_sort_within_sections = "True"
